<resources>
    <string name="app_name">TestApplication</string>
    <string name="student_name">Student Name*</string>
    <string name="start">Start</string>
    <string name="observation_screen">Observation Screen</string>
    <string name="timerDisplay">00:00:00</string>
    <string name="stopButtonText">Stop</string>
    <string name="observationButtonLabel">Observation Info</string>
    <string name="participating">Participating</string>
    <string name="observing">Observing</string>
    <string name="disengaged">Disengaged</string>
    <string name="verbal">Verbal</string>
    <string name="motor">Motor</string>
    <string name="aggressive">Aggressive</string>
    <string name="out_of_seat">Out Of Seat</string>
    <string name="teacher_information_label">Teacher Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="current_class">Current Class</string>
    <string name="observer_information_label">Observer Information</string>
    <string name="title">Title</string>
    <string name="observation_settings_label">Observation Settings</string>
    <string name="total_observation_time">Total Observation Time: </string>
    <string name="observation_frequency">Observation Frequency</string>
    <string name="frequency">Frequency:</string>
    <string name="observed_student">Observed Student</string>
    <string name="peer_std_label">Peer Student</string>
</resources>
